objects/ssot__Regulation__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CommentsText__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Regulation Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastVersionNumber__c</fullName>
        <label>Last Version Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReferenceDocumentsLinks__c</fullName>
        <label>Reference Documents Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RegulationManagerId__c</fullName>
        <label>Regulation Manager</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RegulationManagerObject__c</fullName>
        <label>Regulation Manager Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RegulatoryAuthorityId__c</fullName>
        <label>Regulatory Authority</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Scope__c</fullName>
        <label>Scope</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__UsageType__c</fullName>
        <label>Usage Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731040491535_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regulation_RegulationManagerId_map_I_rel</label>
        <referenceTo>ssot__Individual__dlm</referenceTo>
        <relationshipLabel>Regulation_RegulationManagerId_map_I_rel</relationshipLabel>
        <relationshipName>rel_1731040491535_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731040556471_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regulation_RegulatoryAuthorityId_map_rel</label>
        <referenceTo>ssot__RegulatoryAuthority__dlm</referenceTo>
        <relationshipLabel>Regulation_RegulatoryAuthorityId_map_rel</relationshipLabel>
        <relationshipName>rel_1731040556471_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731041073929_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regulation_RegulationManagerId_map_U_rel</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>Regulation_RegulationManagerId_map_U_rel</relationshipLabel>
        <relationshipName>rel_1731041073929_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>